--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -7,7 +7,7 @@
         android:fillViewport="true"
         android:layout_height="match_parent"
         android:layout_width="match_parent"
-        tools:context=".DetailsFragment">
+        tools:context=".ui.fragments.DetailsFragment">
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
