--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -23,16 +23,15 @@
                 android:layout_centerInParent="true"
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
-                android:layout_marginTop="100dp"
-                android:gravity="center"
-                android:textSize="40sp"
+                android:layout_marginTop="80dp"
                 android:background="@drawable/circular_shape"
-                android:textStyle="bold"
+                android:gravity="center"
                 android:textColor="@android:color/white"
+                android:textSize="40sp"
+                android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="SS" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/hospital_name_txt"
@@ -93,7 +92,7 @@
                 android:id="@+id/website_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="180dp"
+                android:layout_marginTop="40dp"
                 android:text="@string/show_website_txt"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/hospital_name_txt"
@@ -103,8 +102,7 @@
                 android:id="@+id/location_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="180dp"
-                android:layout_marginEnd="12dp"
+                android:layout_marginTop="40dp"
                 android:text="@string/go_to_location_txt"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@+id/hospital_name_txt"
